[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.6"
thiserror = "1.0.21"
arrayref = "0.3.6"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.2"

[lib]
crate-type = ["cdylib", "lib"]
